--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>Single-page Developer Portfolio | Frontend Mentor Project</title>
+    <title>Nícollas Provatti</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
